[gd_scene load_steps=7 format=3 uid="uid://ddbj5g23l6doc"]

[ext_resource type="Script" uid="uid://codmfplgpr5m4" path="res://Scripts/powerup1.gd" id="1_ms4dl"]
[ext_resource type="PackedScene" uid="uid://5r1c4072iu8o" path="res://Scenes/Particles/saw_particles.tscn" id="2_0jewr"]
[ext_resource type="Texture2D" uid="uid://c7pvxb8dx60an" path="res://Assets/Sprites/powerup1.png" id="2_2ev7k"]
[ext_resource type="AudioStream" uid="uid://c6g46xp8qj5n0" path="res://Assets/Audio/418194__deleted_user_3656686__hard-glass-impact.wav" id="3_0jewr"]
[ext_resource type="AudioStream" uid="uid://cyp3ijw40ky0n" path="res://Assets/Audio/laser_sound.wav" id="5_0jewr"]

[sub_resource type="CircleShape2D" id="CircleShape2D_vy2sy"]
radius = 31.780497

[node name="PowerUp1" type="Area2D" groups=["allies"]]
script = ExtResource("1_ms4dl")
saw_particles = ExtResource("2_0jewr")

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(2.1685107, 2.1685107)
texture = ExtResource("2_2ev7k")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-1, 0)
shape = SubResource("CircleShape2D_vy2sy")

[node name="MetalSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_0jewr")
volume_db = -6.466
pitch_scale = 0.5
bus = &"SFX"

[node name="LsrSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("5_0jewr")
volume_db = 2.0
bus = &"SFX"

[node name="Marker2D1" type="Marker2D" parent="."]
position = Vector2(-1, -46)

[node name="Marker2D2" type="Marker2D" parent="."]
position = Vector2(35, -28)

[node name="Marker2D3" type="Marker2D" parent="."]
position = Vector2(-37, -28)

[node name="Marker2D4" type="Marker2D" parent="."]
position = Vector2(-37, 28)

[node name="Marker2D5" type="Marker2D" parent="."]
position = Vector2(-1, 46)

[node name="Marker2D6" type="Marker2D" parent="."]
position = Vector2(35, 29)

[node name="ShootTimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
